--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
       </div>
     </div>
 
-    <script type="module" src="/src/js/index.js"></script>
+    <!-- <script type="module" src="/src/js/index.js"></script> -->
   </body>
 </html>
 
